# rust_projects

./: README.md
active/excelparser/: .gitignore  Cargo.toml  QUICKSTART.md  README.md
excelparser/: Cargo.toml  DEPLOYMENT_GUIDE.md  README.md
excelparser/src/: Serverbeställningxlsx.xlsx  main.rs
rarscanner/: .gitignore  Cargo.toml
scripts-executor/: Cargo.toml  README.md  WORKFLOW.md  setup-dev-environment.sh
tools/rarscanner/: .gitignore
tools/rarscanner/src/: main.rs
tools/rsfilehasher/: Cargo.toml
tools/rsfilehasher/src/: main.rs
tools/scripts-executor/: .gitignore  PROJECT_STRUCTURE.md  config.json.example  executor.go  executor.rs  go.mod  package-for-airgap.sh
