[package]
name = "rarscanner"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7"
chrono = { version = "0.4", features = ["clock"] }
humansize = "2"
num_cpus = "1"
anyhow = "1"
ignore = "0.4"
