[package]
name = "filehash"
version = "1.0.0"
edition = "2021"
authors = ["File Hash Calculator"]
description = "Ett verktyg för att beräkna kryptografiska hashsummor för filer"

[dependencies]
clap = "4.5"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"

[[bin]]
name = "filehash"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true